<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
    android:paddingRight="?android:attr/listPreferredItemPaddingRight">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/error_text"
        android:text="@string/incorrect_username_or_password"
        style="@style/errorText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/username"
        android:layout_gravity="left|center_vertical"
        android:hint="@string/username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:hint="@string/password" />
</LinearLayout>