<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:lines="1"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/item_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:lines="1"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="@dimen/preview_image_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="@dimen/preview_image_width"
            android:layout_height="@dimen/preview_image_height" >

            <ImageView
                android:id="@+id/item_thumbnail"
                android:layout_width="@dimen/preview_image_width"
                android:layout_height="@dimen/preview_image_height" />

            <LinearLayout
                android:id="@+id/item_progress_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/transparent_gray"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/item_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text="Test Info"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="92dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_read"
                style="@style/mainGridViewButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/preview_button_height"
                android:text="@string/read" />

            <Button
                android:id="@+id/button_download"
                style="@style/mainGridViewButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/preview_button_height"
                android:layout_marginTop="4dp"
                android:text="@string/download" />

            <Button
                android:id="@+id/button_sample"
                style="@style/mainGridViewButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/preview_button_height"
                android:layout_marginTop="4dp"
                android:text="@string/sample" />

            <Button
                android:id="@+id/button_delete"
                style="@style/mainGridViewButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/preview_button_height"
                android:layout_marginTop="4dp"
                android:text="@string/delete" />

            <Button
                android:id="@+id/button_cancel"
                style="@style/mainGridViewButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/preview_button_height"
                android:layout_marginTop="4dp"
                android:text="@string/cancel" />

            <ImageButton
                android:id="@+id/button_overflow"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_more_vert_white_24dp"
                android:background="?android:attr/selectableItemBackground"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>